--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "typescript-router",
   "name": "react-ts-project-prep",
   "private": true,
   "version": "0.0.0",
